cv1 	modified:   101-training.ipynb

--- a/101-training.ipynb
+++ b/101-training.ipynb
@@ -41,8 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-30T05:11:22.779983Z",
+     "start_time": "2019-08-30T05:11:21.807480Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -63,8 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-30T05:11:27.796296Z",
+     "start_time": "2019-08-30T05:11:27.763540Z"
+    }
+   },
    "outputs": [],
    "source": [
     "TAG = 'latest'\n",
@@ -82,9 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-30T05:11:30.430188Z",
+     "start_time": "2019-08-30T05:11:29.322369Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# create a YOLOv3 Keras model and save it to file\n",
     "# based on https://github.com/experiencor/keras-yolo3\n",
@@ -255,9 +278,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-30T05:11:38.817436Z",
+     "start_time": "2019-08-30T05:11:38.056923Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+      "Wall time: 8.11 µs\n",
+      "It seems /home/jovyan/data/training-latest/yolov3.weights has been already downloaded\n",
+      "Moving on...\n"
+     ]
+    }
+   ],
    "source": [
     "# YOLOv3 Pre-trained Model Weights (yolov3.weights) (237 MB).\n",
     "YOLOV3_WEIGHTS = 'https://pjreddie.com/media/files/yolov3.weights'\n",
@@ -274,8 +313,112 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2019-08-30T05:07:57.731Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading weights of convolution #0\n",
+      "loading weights of convolution #1\n",
+      "loading weights of convolution #2\n",
+      "loading weights of convolution #3\n",
+      "no convolution #4\n",
+      "loading weights of convolution #5\n",
+      "loading weights of convolution #6\n",
+      "loading weights of convolution #7\n",
+      "no convolution #8\n",
+      "loading weights of convolution #9\n",
+      "loading weights of convolution #10\n",
+      "no convolution #11\n",
+      "loading weights of convolution #12\n",
+      "loading weights of convolution #13\n",
+      "loading weights of convolution #14\n",
+      "no convolution #15\n",
+      "loading weights of convolution #16\n",
+      "loading weights of convolution #17\n",
+      "no convolution #18\n",
+      "loading weights of convolution #19\n",
+      "loading weights of convolution #20\n",
+      "no convolution #21\n",
+      "loading weights of convolution #22\n",
+      "loading weights of convolution #23\n",
+      "no convolution #24\n",
+      "loading weights of convolution #25\n",
+      "loading weights of convolution #26\n",
+      "no convolution #27\n",
+      "loading weights of convolution #28\n",
+      "loading weights of convolution #29\n",
+      "no convolution #30\n",
+      "loading weights of convolution #31\n",
+      "loading weights of convolution #32\n",
+      "no convolution #33\n",
+      "loading weights of convolution #34\n",
+      "loading weights of convolution #35\n",
+      "no convolution #36\n",
+      "loading weights of convolution #37\n",
+      "loading weights of convolution #38\n",
+      "loading weights of convolution #39\n",
+      "no convolution #40\n",
+      "loading weights of convolution #41\n",
+      "loading weights of convolution #42\n",
+      "no convolution #43\n",
+      "loading weights of convolution #44\n",
+      "loading weights of convolution #45\n",
+      "no convolution #46\n",
+      "loading weights of convolution #47\n",
+      "loading weights of convolution #48\n",
+      "no convolution #49\n",
+      "loading weights of convolution #50\n",
+      "loading weights of convolution #51\n",
+      "no convolution #52\n",
+      "loading weights of convolution #53\n",
+      "loading weights of convolution #54\n",
+      "no convolution #55\n",
+      "loading weights of convolution #56\n",
+      "loading weights of convolution #57\n",
+      "no convolution #58\n",
+      "loading weights of convolution #59\n",
+      "loading weights of convolution #60\n",
+      "no convolution #61\n",
+      "loading weights of convolution #62\n",
+      "loading weights of convolution #63\n",
+      "loading weights of convolution #64\n",
+      "no convolution #65\n",
+      "loading weights of convolution #66\n",
+      "loading weights of convolution #67\n",
+      "no convolution #68\n",
+      "loading weights of convolution #69\n",
+      "loading weights of convolution #70\n",
+      "no convolution #71\n",
+      "loading weights of convolution #72\n",
+      "loading weights of convolution #73\n",
+      "no convolution #74\n",
+      "loading weights of convolution #75\n",
+      "loading weights of convolution #76\n",
+      "loading weights of convolution #77\n",
+      "loading weights of convolution #78\n",
+      "loading weights of convolution #79\n",
+      "loading weights of convolution #80\n",
+      "loading weights of convolution #81\n",
+      "no convolution #82\n",
+      "no convolution #83\n",
+      "loading weights of convolution #84\n",
+      "no convolution #85\n",
+      "no convolution #86\n",
+      "loading weights of convolution #87\n",
+      "loading weights of convolution #88\n",
+      "loading weights of convolution #89\n",
+      "loading weights of convolution #90\n",
+      "loading weights of convolution #91\n",
+      "loading weights of convolution #92\n"
+     ]
+    }
+   ],
    "source": [
     "# define the model\n",
     "model = make_yolov3_model()\n",
@@ -311,9 +454,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-08-30T05:11:51.054561Z",
+     "start_time": "2019-08-30T05:11:50.723468Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Only know how to handle extensions: ['png']; with Pillow installed matplotlib can handle more images",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/matplotlib/image.py\u001b[0m in \u001b[0;36mimread\u001b[0;34m(fname, format)\u001b[0m\n\u001b[1;32m   1411\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1412\u001b[0;31m             \u001b[0;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1413\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'PIL'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-6cb988ac8a65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# load image as pixel array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTEST_PHOTO_FILE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# summarize shape of the pixel array print(data.dtype)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/matplotlib/image.py\u001b[0m in \u001b[0;36mimread\u001b[0;34m(fname, format)\u001b[0m\n\u001b[1;32m   1414\u001b[0m             raise ValueError('Only know how to handle extensions: %s; '\n\u001b[1;32m   1415\u001b[0m                              \u001b[0;34m'with Pillow installed matplotlib can handle '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1416\u001b[0;31m                              'more images' % list(handlers))\n\u001b[0m\u001b[1;32m   1417\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1418\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mpil_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Only know how to handle extensions: ['png']; with Pillow installed matplotlib can handle more images"
+     ]
+    }
+   ],
    "source": [
     "from matplotlib import image\n",
     "from matplotlib import pyplot\n",
@@ -799,7 +964,7 @@
     "instance",
     "_Feature"
    ],
-   "window_display": true
+   "window_display": false
   }
  },
  "nbformat": 4,
